<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <TextView
        android:id="@+id/label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="QUANTITY"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement_quantity_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="-"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="0"
            android:textColor="#000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/increment_quantity_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="+"/>

    </LinearLayout>

    <TextView
        android:id="@+id/label_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PRICE"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="$"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="ORDER"/>

</LinearLayout>